Se ordenan las clases, para un mejor contexto lógico. Se añade la capacidad de ejecutar la aplicación desde el jar, sin necesidad de tener un contenedor

--- a/SpringBoot-Raspberry/pom.xml
+++ b/SpringBoot-Raspberry/pom.xml
@@ -4,7 +4,7 @@
     <groupId>cl.cc</groupId>
     <artifactId>SpringBoot-Raspberry</artifactId>
     <version>1.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -100,6 +100,7 @@
     </dependencies>
    
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <!-- Force compiler version -->
             <plugin>
@@ -107,8 +108,45 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <!-- Plugin to configure dependencies -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>
+                                ${project.build.directory}/dist/lib
+                            </outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Plugin to build the JAR file -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <finalName>${project.artifactId}</finalName>
+                    <outputDirectory>${project.build.directory}/dist</outputDirectory>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>cl.cc.main.Run</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
             <!-- Plugin to build the WAR file -->
